force-app/main/default/objects/GSA_Project_Contact__c/GSA_Project_Contact__c.object-meta.xml
<CustomObject>
    <label>GSA Project Contact</label>
    <nameField>
        <displayFormat>GSA-{00000}</displayFormat>
        <label>GSA Project Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA Project Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>