force-app/main/default/objects/GSA_Project_Contact__c/fields/GSA_Project__c.field-meta.xml
<CustomField>
    <fullName>GSA_Project__c</fullName>
    <label>GSA Project</label>
    <referenceTo>GSA_Project__c</referenceTo>
    <relationshipLabel>GSA Project Contacts</relationshipLabel>
    <relationshipName>GSA_Project_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>