force-app/main/default/objects/GSA_Project_Contact__c/fields/Key_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Key_Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Personnel</label>
    <type>Checkbox</type>
</CustomField>