force-app/main/default/objects/GSA_Project_Contact__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <label>LOE</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>