force-app/main/default/objects/GSA_Project_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>GSA_Project__c</columns>
    <columns>GSA_Functional_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>