force-app/main/default/objects/GSA_Project_Contact__c/listViews/List_I.listView-meta.xml
<ListView>
    <fullName>List_I</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>GSA_Functional_Role__c</columns>
    <columns>GSA_Project__c</columns>
    <filterScope>Mine</filterScope>
    <label>List I</label>
</ListView>